# bitdrill

./: INSTALL.md  Makefile  README.md  aclocal.m4  autocrap.sh  bitdrill.kdevelop  config.status  configure  configure.ac  libtool
aux/: assoc.gen.tar.Z
aux/kdci/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.in  mkinstalldirs  test.txt
aux/kdci/autom4te.cache/: output.0  requests  traces.0
aux/kdci/src/: candidates.cc  candidates.hh  database.cc  database.hh  direct_count.hh  fim_all.cc  frequents.cc  frequents.hh  items.cc  items.hh  memory.cc  memory.hh  tid_list_macros.hh  transaction.cc  transaction.hh  utils.cc  utils.hh  vertical.cc  vertical.hh
config/: ccgnu-test.cxx  config.h  config.h.in  mkinstalldirs  stamp-h1
data/: datafiles  datafiles-aim  datafiles-all  datafiles-candidates  datafiles-dci-closed  datafiles-fpgrowth  datafiles-lcm  datafiles-scale  datafiles-scale-T40  datafiles-scale-old  datafiles2  datafiles2-big  datafiles2-realworld  datafiles2-synth  datafiles2-synth-medium  datafiles2-t60-alt  datafiles2-test  datafiles3-test  exemplary-datafiles  large-datafiles-synth  old-datafiles  small-datafiles  typical-datafiles
doc/: AUTHORS  BUGS  INSTALL  NEWS  README  TODO  saveplot.gp
generic/: General.hxx  Getopt.cxx  Getopt.hxx  ISO_Library.hxx  Log.cxx  Log.hxx  Utility.cxx  Utility.hxx
graph/: Metis_Graph.cxx  Mtx_Graph.cxx  Mtx_Graph.hxx  UT_Matrix.cxx  UT_Matrix.hxx  Vertex_Induced_Subgraph.hxx  Vertex_Separator.cxx
haskell/: Clique.hs  Dynamic.hs  Graph.hs  Graph_IO.hs  Hypergraph.hs  Makefile  Table.hs  test-comms-model.hs
justmake/: Makefile.automatic-dependencies  Makefile.build-rules  Makefile.commands  Makefile.cvs  Makefile.dependencies  Makefile.dirs  Makefile.experimental  Makefile.files  Makefile.first  Makefile.functions  Makefile.justmake  Makefile.last  Makefile.options  Makefile.pattern-rules  Makefile.recursive  Makefile.targets  Makefile.test  Makefile.utilities  bump-revision.sh
kdci/: 2items-kdci.cxx  Makefile.in  candidates.cc  candidates.hh  database.cc  direct_count.hh  fim_all_merge.cc.work  fim_all_third.cxx  freq-kdci.cc  frequents.cc  transaction.cc  utils.cc  utils.hh
lcm20/: lcm.c  lcm_freq.hxx  lcm_max.c  lib_e.c
lib/: README
perf/: BUGS  Makefile.nested-perf  Makefile.perf  README  analysis.dbm  analysis.py  avg-dissection.py  benchmark  benchmark.serial.cypress.db  benchmark2  benchmark2.serial.skynet.db  bitdrill.prof  cat-analysis.py  cat-db.py  errors  fimi-calc-avg.py  fimi04.data  kdci.prof  log  perf.e3p  perf.py  plot-analysis.py  plot-serial-time.py  plot-space.py  plot.sh  plot3.sh  remove-serial.py  run-all.sh  serial-time-aim.py  serial-time-borg.dbm  serial-time-dci-closed.py  serial-time-fpgrowth.py  serial-time-lcm.py  serial-time.dbm  serial-time.py  serial-time2.py  serial-time3.py  space.dbm  space.py  stats-serial-time.py  (+3 more)
scripts/: bms-to-ascii.py  count-patterns.py  db-lowpass.py  diff-patterns.py  dv-to-ts.py  util.py  (+14 more)
src/kdci/: Makefile  Makefile.am  database.hh  fim_all.cc  fim_all.hh  frequents.hh  items.cc  items.hh  memory.cc  memory.hh  nitems-kdci.cxx  tid_list_macros.hh  transaction.hh  vertical.cc  vertical.hh
(+408 files in other folders)
