# Copyright (C) 2003 salvatore orlando <orlando@unive.it>
# University of Venice, Ca' Foscari, Dipartimento di Informatica, (VE) Italy
# Istituto di Scienza e Tecnologia dell'Informazione, ISTI - CNR, (PI) Italy
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT(src/fim_all.cc)
AM_INIT_AUTOMAKE(dci,2.0)
AC_PROG_CXX(g++)
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_OUTPUT(Makefile src/Makefile)
