# Copyright (C) 2003 salvatore orlando <orlando@unive.it>
# University of Venice, Ca' Foscari, Dipartimento di Informatica, (VE) Italy
# Istituto di Scienza e Tecnologia dell'Informazione, ISTI - CNR, (PI) Italy
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

INCLUDES =
LIBS =

CXXFLAGS =
AM_CXXFLAGS = -Wall --pedantic -O3 -finline-functions 


bin_PROGRAMS = fim_all

fim_all_SOURCES = fim_all.cc \
	candidates.cc candidates.hh direct_count.hh \
	frequents.cc frequents.hh \
	transaction.cc transaction.hh \
	items.cc items.hh \
	database.cc database.hh \
	utils.cc utils.hh \
	vertical.cc vertical.hh tid_list_macros.hh \
	memory.hh memory.cc


